--- a/Downloads/demo7/Jenkinsfile
+++ b/Downloads/demo7/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
             steps {
                 checkout([$class: 'GitSCM',
                           branches: [[name: '*/main']],
-                          userRemoteConfigs: [[url: 'https://github.com/eslemnurgok/springdemo']]])
+                          userRemoteConfigs: [[url: 'https://github.com/eslemnurgok/demo']]])
                 sh 'mvn clean install'
             }
         }
