--- a/Downloads/demo7/Jenkinsfile
+++ b/Downloads/demo7/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools {
-        maven 'maven'
+        maven 'maven3.5.0'
     }
     stages {
         stage('Build Maven') {
